# kanu-ai

./: README.md  Untitled  assistant.py  chat_ui.py  main.py  pyproject.toml  tools.py  utility.py
agent/: agent.py  context_builder.py  system_prompt.py
llm/: ollama.py
memory/: extractor.py  long_term.json  long_term.py  memory_manager.py  short_term.py
rag/: embedder.py  rag_engine.py  vector_store.py
tools/: calculator.py  registry.py
ui/: chat_bubble.py  chat_ui.py  debug_panel.py  habit_timeline.py  memory_editor.py  memory_view.py  profile_view.py  settings_panel.py
utility/: json_utils.py  math.py  safe_json.py  system_prompt.py
