[project]
name = "opclaw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cmdop>=2026.4.7.2",
    "faiss-cpu>=1.9.0",
    "numpy>=2.0.0",
    "openclaw>=2026.3.20",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "tenacity>=9.1.4",
]
